--- a/app/src/main/res/layout/activity_audio.xml
+++ b/app/src/main/res/layout/activity_audio.xml
@@ -19,16 +19,53 @@
         android:layout_below="@+id/activity_audio_local_network_user_tv"
         android:layout_marginBottom="25dp"
         android:layout_marginTop="10dp"
-        app:layoutManager="LinearLayoutManager">
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager">
 
     </android.support.v7.widget.RecyclerView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_marginBottom="30dp">
 
+
+            <ImageView
+                android:id="@+id/chat_record"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/comment_voice_selector"
+                android:layout_gravity="center"
+                android:visibility="visible" />
+            <TextView
+                android:id="@+id/start_intercom"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:text="@string/press_talk"
+                android:gravity="center"
+                android:layout_gravity="top"
+                android:textSize="10sp"
+                android:textColor="@color/white"/>
+
+            <Button
+                android:id="@+id/close_intercom"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:text="@string/close"
+                android:textSize="15sp"
+                android:visibility="gone"/>
+        </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,5 +78,6 @@
             android:layout_height="wrap_content"
             android:text="255.255.255.255"
             android:textSize="15sp"/>
+    </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
