--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,188 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="buttonCornerSize">2dp</dimen>
+    <dimen name="dialog_round_radius">4dp</dimen>
+    <dimen name="smallButtonHeight">32dp</dimen>
+    <dimen name="smallButtonWidth">48dp</dimen>
+    <dimen name="normalButtonHeight">48dp</dimen>
+    <dimen name="normalButtonWidth">80dp</dimen>
+
+
+
+    <dimen name="bigButtonTextSize">18dp</dimen>
+    <dimen name="normalButtonTextSize">16dp</dimen>
+    <dimen name="smallButtonTextSize">14dp</dimen>
+
+
+    <dimen name="ware_grid_img_width">180dp</dimen>
+    <dimen name="ware_grid_img_height">180dp</dimen>
+    <dimen name="ware_img_height">150dp</dimen>
+    <dimen name="ware_img_width">150dp</dimen>
+    <dimen name="small_ware_img_width">100dp</dimen>
+    <dimen name="category_layout_width">120dp</dimen>
+
+
+    <!--app基本的字体大小-->
+    <dimen name="base_text_size">14sp</dimen>
+    <dimen name="small_text_size">12sp</dimen>
+    <dimen name="big_text_size">16sp</dimen>
+    <dimen name="smaller_text_size">10sp</dimen>
+    <dimen name="bigger_text_size">18sp</dimen>
+
+    <dimen name="text_18">18sp</dimen>
+    <dimen name="text_14">14sp</dimen>
+    <dimen name="text_12">12sp</dimen>
+
+    <!--间距-->
+    <dimen name="screenPadding">10dp</dimen>   <!--距离屏幕左右的边距.这个app通用-->
+    <dimen name="basicPaddingSize">4dp</dimen>
+    <dimen name="inputEditTextMinHeight">32dp</dimen>
+    <dimen name="searchViewMinHeight">45dp</dimen>
+    <dimen name="smallPadding">8dp</dimen>
+    <dimen name="largePadding">16dp</dimen>
+    <dimen name="largerPadding">24dp</dimen>
+    <dimen name="largestPadding">32dp</dimen>
+    <dimen name="smallerPadding">3dp</dimen>
+    <dimen name="littlePadding">60dp</dimen>
+    <dimen name="middlePadding">10dp</dimen>
+    <dimen name="basePadding">12dp</dimen>
+    <dimen name="footerPadding">11dp</dimen>
+    <dimen name="noPadding">0dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+
+    <dimen name="abc_config_prefDialogWidth">320dp</dimen>
+    <dimen name="abc_action_bar_stacked_tab_max_width">180dp</dimen>
+    <dimen name="abc_action_bar_default_height">48dip</dimen>
+    <dimen name="abc_action_bar_icon_vertical_padding">8dip</dimen>
+    <dimen name="abc_action_bar_title_text_size">18dp</dimen>
+    <dimen name="abc_action_bar_subtitle_text_size">14dp</dimen>
+    <dimen name="abc_action_bar_subtitle_top_margin">-3dp</dimen>
+    <dimen name="abc_action_bar_subtitle_bottom_margin">5dip</dimen>
+    <dimen name="abc_action_button_min_width">56dip</dimen>
+    <dimen name="abc_action_bar_stacked_max_height">48dp</dimen>
+    <dimen name="abc_panel_menu_list_width">296dp</dimen>
+    <dimen name="abc_search_view_text_min_width">160dip</dimen>
+    <dimen name="abc_search_view_preferred_width">320dip</dimen>
+    <dimen name="abc_dropdownitem_text_padding_left">8dip</dimen>
+    <dimen name="abc_dropdownitem_text_padding_right">8dip</dimen>
+    <dimen name="abc_dropdownitem_icon_width">32dip</dimen>
+    <dimen name="NormalTextSize">16.0dip</dimen>
+    <dimen name="InputEditTextMinHeight">32.0dip</dimen>
+    <dimen name="BasicPaddingSize">4.0dip</dimen>
+    <dimen name="NormalPadding">12.0dip</dimen>
+    <dimen name="HintTextSize">14.0dip</dimen>
+    <dimen name="SmallPadding">8.0dip</dimen>
+    <dimen name="SmallListHeight">48.0dip</dimen>
+    <dimen name="LargestPadding">32.0dip</dimen>
+    <dimen name="SmallTextSize">14.0dip</dimen>
+    <dimen name="big_horizontal_progress_height">8.0dip</dimen>
+    <dimen name="BigTextSize">17.0dip</dimen>
+    <dimen name="SmallestPadding">2.0dip</dimen>
+    <dimen name="SmallestTextSize">12.0dip</dimen>
+    <dimen name="DefaultTabbarHeight">40.0dip</dimen>
+    <dimen name="ccp_button_text_size">18sp</dimen>
+    <dimen name="primary_text_size">14sp</dimen>
+    <dimen name="NormalButtonHeight">48.0dip</dimen>
+    <dimen name="DividerHeight">1.0dip</dimen>
+    <dimen name="LargerPadding">24.0dip</dimen>
+    <dimen name="LargePadding">16.0dip</dimen>
+    <dimen name="SmallButtonWidth">48.0dip</dimen>
+    <dimen name="SmallButtonHeight">32.0dip</dimen>
+    <dimen name="ButtonCornerSize">2.0dip</dimen>
+    <dimen name="DefaultActionbarHeightPort">49.0dip</dimen>
+    <dimen name="DefaultActionbarHeightLand">40.0dip</dimen>
+    <dimen name="NormalAvatarWrapSize">56.0dip</dimen>
+    <dimen name="NormalListHeight">64.0dip</dimen>
+    <dimen name="LargestListHeight">70.0dip</dimen>
+    <dimen name="SmallerPadding">3.0dip</dimen>
+    <dimen name="NormalAvatarSize">48.0dip</dimen>
+    <dimen name="OneDPPadding">1.0dip</dimen>
+    <dimen name="SmallerTextSize">13.0dip</dimen>
+    <dimen name="ChattingContentMinHeight">49.0dip</dimen>
+    <dimen name="CheckBoxWidth">20.0dip</dimen>
+    <dimen name="CheckBoxHeight">20.0dip</dimen>
+    <dimen name="ChattingFootSwitcherWidth">48.0dip</dimen>
+    <dimen name="ChattingFootPaddingBottom">7.5dip</dimen>
+    <dimen name="ChattingFootSendMargin">3.0dip</dimen>
+    <dimen name="ChattingFootEditMaxHeigh">80.0dip</dimen>
+    <dimen name="ChattingFootEditMinHeigh">28.0dip</dimen>
+    <dimen name="ChattingFootSendHeight">32.0dip</dimen>
+    <dimen name="ChattingFootVoiceHeight">34.0dip</dimen>
+    <dimen name="ChattingFootSmallerPadding">4.0dip</dimen>
+    <dimen name="ChattingFootSendMinWidth">44.0dip</dimen>
+    <dimen name="emoji_panel_tab_height">36.0dip</dimen>
+    <dimen name="emoji_largh_item_height">86.0dip</dimen>
+    <dimen name="emoji_panel_tab_image_size">26.0dip</dimen>
+    <dimen name="LittlePadding">6.0dip</dimen>
+    <dimen name="FixedTitleWidth">80.0dip</dimen>
+    <dimen name="AddressScrollBarWidth">24.0dip</dimen>
+    <dimen name="popup_menu_item_width">220.0dip</dimen>
+    <dimen name="popup_menu_item_height">49.0sp</dimen>
+    <dimen name="popup_menu_item_minHeight">49.0dip</dimen>
+    <dimen name="popup_menu_image_margin_left">14.0dip</dimen>
+    <dimen name="popup_menu_image_margin_top">0.0dip</dimen>
+    <dimen name="popup_menu_image_margin_right">12.0dip</dimen>
+    <dimen name="popup_menu_image_margin_bottom">0.0dip</dimen>
+    <dimen name="topbar_content_height">50.0dip</dimen>
+    <dimen name="btn_topbar_layout_minwidth">80.0dip</dimen>
+    <dimen name="btn_topbar_marginHorizontal">10.0dip</dimen>
+    <dimen name="btn_topbar_minwidth">58.0dip</dimen>
+    <dimen name="btn_topbar_paddingHorizontal">10.0dip</dimen>
+    <dimen name="topbar_height">52.0dip</dimen>
+    <dimen name="TitleTextSize">18.0dip</dimen>
+    <dimen name="view_space">3.0dip</dimen>
+    <dimen name="ContactAvatarSize">36.0dip</dimen>
+    <dimen name="ContactListHeight">52.0dip</dimen>
+    <dimen name="MediumListHeight">56.0dip</dimen>
+    <dimen name="ActionBarTextSize">18.0dip</dimen>
+    <dimen name="dialog_padding">15.0dip</dimen>
+    <dimen name="dialog_edittext_height">45.0dip</dimen>
+    <dimen name="text_view_content">15.0sp</dimen>
+    <dimen name="NormalIconSize">32.0dip</dimen>
+    <dimen name="bladeview_fontsize">12sp</dimen>
+    <dimen name="bladeview_popup_fontsize">20sp</dimen>
+    <dimen name="bladeview_popup_height">80.0dip</dimen>
+    <dimen name="NormalButtonWidth">80.0dip</dimen>
+    <dimen name="MinDialogWidth">320.0dip</dimen>
+    <dimen name="text_list_title">16.0sp</dimen>
+    <dimen name="text_list_desc">13.0sp</dimen>
+    <dimen name="shape_corners">4.0dip</dimen>
+    <dimen name="message_editor_hight">49.0dip</dimen>
+    <dimen name="ChatAvatarWrapSize">44.0dip</dimen>
+    <dimen name="SmallAvatarSize">40.0dip</dimen>
+    <dimen name="Emoji_icon_size">20.0sp</dimen>
+
+
+    <!-- 多路视频dimen定义 -->
+
+    <dimen name="title_large_text_size">22sp</dimen>
+
+    <!-- The primary text size -->
+    <!-- The primary text size -->
+    <dimen name="title_text_size">16sp</dimen>
+    <!-- The ccp button text size -->
+    <!-- The title large text size -->
+
+    <!-- The ccp item space -->
+    <dimen name="ccp_item_space">2.0dp</dimen>
+    <dimen name="mode_sub_desc_space">5dp</dimen>
+    <!-- the mode developer or experience desc space -->
+    <dimen name="mode_desc_space">8dp</dimen>
+    <dimen name="small_margin_space">12dp</dimen>
+    <!-- The primary margin space -->
+    <dimen name="primary_margin_space">15dp</dimen>
+    <dimen name="down_up_icon_space">22dp</dimen>
+    <!-- The notice status bar height size -->
+    <dimen name="ccp_notice_statusbar">27dp</dimen>
+    <!-- The secondary margin space -->
+    <dimen name="secondary_margin_space">28dp</dimen>
+    <dimen name="ccp_capacity_launcher_space">32dp</dimen>
+    <!-- The ccp icon text or edit height -->
+    <dimen name="ccp_icontext_item_height">50dp</dimen>
+    <dimen name="ccp_capacity_item_width">122dp</dimen>
+
+
 </resources>
